--- a/order_List.html
+++ b/order_List.html
@@ -18,13 +18,6 @@
 		<script src="js/mui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init()
-			mui.plusReady(function() {
-				var old_back = mui.back;
-				mui.back = function() {
-					//alert(1)
-					$(location).attr('href', '');
-				}
-			});
 		</script>
 		</script>
 		<script type="text/javascript">
@@ -40,7 +33,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-btn mui-btn-link mui-pull-right"><span class="mui-icon mui-icon mui-icon-gear"></span></a>
+			<a href="carSetting.html" class="mui-btn mui-btn-link mui-pull-right"><span class="mui-icon mui-icon mui-icon-gear"></span></a>
 			<h1 class="mui-title">订单</h1>
 		</header>
 		<div class="page" style="position: absolute; top: 0;right: 0;bottom: 0;left: 0;margin-top: 50px;">
