--- a/carSetting.html
+++ b/carSetting.html
@@ -6,45 +6,44 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="css/mui.picker.css" />
+		<link rel="stylesheet" type="text/css" href="css/mui.poppicker.css" />
 		<style type="text/css">
-			html,
-			body {
-				height: 100%;
-				background: white;
-				text-align:center
-			}
-			
-			.hBac {
-				width: 100%;
-				height: 50%;
-				background: blue;
-			}
+
 		</style>
 	</head>
 
-	<body>
+	<body background="img/BG.png">
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">设置</h1>
 		</header>
-		<div style="margin-top: 50px;background: url(img/BG.png);background-size: 100% 50%;" class="hBac">
-			<form class="mui-input-group" >
+		<div style="margin-top: 50%;">
+			<form class="mui-input-group">
+				<div class="mui-input-row">
+					<label>用户名</label>
+					<input type="text" class="mui-input-clear" placeholder="会员姓名">
+				</div>
+				<button id='showUserPicker' class="mui-btn mui-btn-block" type='button'>1一级选择示例 ...</button>
+				<div id='userResult' class="ui-alert"></div>
 				<div class="mui-input-row">
 					<label>用户名</label>
 					<input type="text" class="mui-input-clear" placeholder="请输入用户名">
 				</div>
-				<div class="mui-input-row">
+				<!--<div class="mui-input-row">
 					<label>密码</label>
 					<input type="password" class="mui-input-password" placeholder="请输入密码">
-				</div>
-				<div class="mui-button-row">
+				</div>-->
+				<!--<div class="mui-button-row">
 					<button type="button" class="mui-btn mui-btn-primary">确认</button>
 					<button type="button" class="mui-btn mui-btn-danger">取消</button>
-				</div>
+				</div>-->
 			</form>
 		</div>
 
 		<script src="js/mui.min.js"></script>
+		<script src="js/mui.picker.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/mui.poppicker.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
 			mui.plusReady(function() {
@@ -55,6 +54,64 @@
 
 				}
 			});
+		</script>
+		<script type="text/javascript">
+			(function($, doc) {
+				$.init();
+				$.ready(function() {
+					/**
+					 * 获取对象属性的值
+					 * 主要用于过滤三级联动中，可能出现的最低级的数据不存在的情况，实际开发中需要注意这一点；
+					 * @param {Object} obj 对象
+					 * @param {String} param 属性名
+					 */
+					var _getParam = function(obj, param) {
+						return obj[param] || '';
+					};
+					//普通示例
+					var userPicker = new $.PopPicker();
+					userPicker.setData([{
+						value: 'ywj',
+						text: '董事长 叶文洁'
+					}, {
+						value: 'aaa',
+						text: '总经理 艾AA'
+					}, {
+						value: 'lj',
+						text: '罗辑'
+					}, {
+						value: 'ymt',
+						text: '云天明'
+					}, {
+						value: 'shq',
+						text: '史强'
+					}, {
+						value: 'zhbh',
+						text: '章北海'
+					}, {
+						value: 'zhy',
+						text: '庄颜'
+					}, {
+						value: 'gyf',
+						text: '关一帆'
+					}, {
+						value: 'zhz',
+						text: '智子'
+					}, {
+						value: 'gezh',
+						text: '歌者'
+					}]);
+					var showUserPickerButton = doc.getElementById('showUserPicker');
+					var userResult = doc.getElementById('userResult');
+					showUserPickerButton.addEventListener('tap', function(event) {
+						userPicker.show(function(items) {
+							showUserPickerButton.innerText = JSON.stringify(items[0]);
+							//返回 false 可以阻止选择框的关闭
+							//return false;
+						});
+					}, false);
+				});
+			})(mui, document);
 		</script>
 	</body>
 
